@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 0.8 - unreleased
 
+  MAHOUT-1254: Final round of cleanup for StreamingKMeans (dfilimon)
+
   MAHOUT-1263: Serialise/Deserialise Lambda value for OnlineLogisticRegression (Mike Davy via smarthi)  
 
   MAHOUT-1258: Another shot at findbugs and checkstyle (ssc)
